# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  setup.cfg
hooks/: check_feature_tags.py  my_test_hook.py
shopozor_hooks/: check_dos2unix.py  check_feature_tags.py
