[metadata]
name = shopozor_hooks
version = 0.0.1
description = Necessary hooks for the Shopozor that we could not find anywhere else
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shopozor/pre-commit-hooks
author = Laurent Michel
author_email = laurent.michel@softozor.ch
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    my-test-hook = hooks.my_test_hook:main
    check-feature-tags = hooks.check_feature_tags:main